--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "firebase": "^8.2.1",
+    "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-toastify": "^6.0.0-rc.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
